# ee

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  invenio.cfg  pyproject.toml
.github/workflows/: publish.yml  release.yml
app_data/: vocabularies.yaml
app_data/vocabularies/: affiliations_ror.yaml  competition_types.yaml  resource_types.yaml
assets/js/invenio_app_rdm/overridableRegistry/: RecordsResultsListItem.js
assets/less/site/collections/: menu.overrides
assets/less/site/elements/: button.overrides
assets/less/site/globals/: site.overrides  site.variables
assets/less/site/modules/: search.overrides
scripts/: update_translations.py
site/ee/: __init__.py  views.py  webpack.py
site/invenio_rdm_starter/: __init__.py  views.py  webpack.py
site/invenio_rdm_starter/assets/semantic-ui/less/invenio_rdm_starter/: fonts.less
site/tests/: test_metrics_endpoint.py
templates/semantic-ui/invenio_app_rdm/: footer.html  frontpage.html  header.html  header_frontpage.html  header_login.html  top_banner.html  trackingcode.html
templates/semantic-ui/invenio_app_rdm/macros/: records_list.html
templates/semantic-ui/invenio_app_rdm/records/details/: details.html  subjects.html
templates/semantic-ui/invenio_app_rdm/records/details/side_bar/: details.html
templates/semantic-ui/invenio_app_rdm/records/macros/: detail.html
templates/semantic-ui/invenio_rdm_starter/: base.html
translations/es/LC_MESSAGES/: messages.po
translations/pt/LC_MESSAGES/: messages.po
translations/zh/LC_MESSAGES/: messages.po
