[project]
name = "ee"
version = "13.0.8.1"
description = "Engineering Edge repository based on InvenioRDM"
authors = [
    { name = "Brian Hole", email = "info@ee.dromologics.com" },
    { name = "Martin Fenner", email = "martin@front-matter.de" },
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
dependencies = [
    "invenio-app-rdm>=13.0.8,<14.0.0",
    "invenio-search[opensearch2]>=3.0.0",
    "invenio-s3>=3.0.2",
    "invenio-previewer>=3.3.0,<3.4.0",
    "invenio-vocabularies",
    "invenio-oauthclient",
    "idutils",
    "setuptools>=70,<81",
    "gunicorn~=23.0.0",
    "structlog>=25.0",
    "prometheus-flask-exporter>=0.23.1",
    "invenio-logging[sentry]",
    "structlog-sentry>=2.1.0",
]

[tool.uv.sources]
invenio-oauthclient = { git = "https://github.com/front-matter/invenio-oauthclient", branch = "maint-v5.x" }
idutils = { git = "https://github.com/front-matter/idutils", branch = "openalex" }
invenio-vocabularies = { git = "https://github.com/front-matter/invenio-vocabularies", branch = "maint-8.x" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["site/ee/*.py"]

[tool.hatch.build.targets.wheel]
sources = { "site" = "" }

[tool.ruff]
line-length = 79
include = ["pyproject.toml", "site/**/*.py"]

[project.entry-points."invenio_base.blueprints"]
ee = "ee.views:create_blueprint"

[project.entry-points."invenio_base.api_blueprints"]
ee_api = "ee.views:create_api_blueprint"

[project.optional-dependencies]
docs = ["mkdocs-material>=9.7.0"]
